--- a/gallery/nwm_assessment.ipynb
+++ b/gallery/nwm_assessment.ipynb
@@ -11,7 +11,8 @@
     "* Extract data at benchmark locations for assessment compared to observed streamflow. \n",
     "* Average hourly NWM data to daily\n",
     "* interpolate obs and data onto time base\n",
-    "* use xskillscore to compare"
+    "* use xskillscore to compare\n",
+    "rendered notebook at: https://nbviewer.org/gist/3bb691ac57f1788a60ec61ec6f49e38d"
    ]
   },
   {
