--- a/gallery/nwm_assessment.ipynb
+++ b/gallery/nwm_assessment.ipynb
@@ -6,13 +6,15 @@
    "metadata": {},
    "source": [
     "# National Water Model Reanalysis v2.1 Assessment\n",
+    "\n",
+    "[Notebook with rendered output](https://nbviewer.org/gist/529a4b1d754470b4e0ef202f0a89c973)\n",
+    "\n",
     "* The National Water Model Reanalysis v2.1 is available as a Zarr dataset on AWS Public Dataset on us-east-1. \n",
     "* For speed we use a derivative rechunked product created by James McCreight where each chunk is a full time series at a feature_id\n",
     "* Extract data at benchmark locations for assessment compared to observed streamflow. \n",
     "* Average hourly NWM data to daily\n",
     "* interpolate obs and data onto time base\n",
-    "* use xskillscore to compare\n",
-    "* rendered notebook at: https://nbviewer.org/gist/3bb691ac57f1788a60ec61ec6f49e38d"
+    "* use xskillscore to compare"
    ]
   },
   {
@@ -39,7 +41,8 @@
    "id": "c00451dd-0872-46bb-8dd3-ac27863b8765",
    "metadata": {},
    "source": [
-    "#### Open CSV file with obs info from Sydney Foks"
+    "Read gage locations from CSV file\n",
+    "supplied by Sydney Foks"
    ]
   },
   {
@@ -70,6 +73,15 @@
    "outputs": [],
    "source": [
     "fs.size(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "075c8dbf-dbc8-4f11-97bd-1ae6b0c53a5d",
+   "metadata": {},
+   "source": [
+    "Tell read_csv to use strings for IDs \n",
+    "(defaults to int64 otherwise):"
    ]
   },
   {
@@ -117,7 +129,7 @@
    "id": "0b47fb82-7ebe-4a7f-b398-9ae657b87e3d",
    "metadata": {},
    "source": [
-    "#### pick some sites"
+    "Pick some sites:"
    ]
   },
   {
@@ -134,9 +146,11 @@
   {
    "cell_type": "markdown",
    "id": "202cea3d-16c8-4a02-b2eb-ff3fa522bc2a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "#### pick a time period"
+    "Pick a time period to compare:"
    ]
   },
   {
@@ -151,13 +165,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab20d333-5ce5-499f-8661-52bda85807f2",
+   "metadata": {},
+   "source": [
+    "## Read modeled streamflow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0bc3e573-2402-4d4c-9726-73908334c81b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#National Water Model\n",
+    "\n",
     "url = 's3://noaa-nwm-retrospective-2-1-zarr-pds'"
    ]
   },
@@ -332,7 +354,7 @@
    "id": "461593ba-cb2b-4c82-a14f-73d72ae6a068",
    "metadata": {},
    "source": [
-    "#### Extract obs data using hyriver"
+    "## Read Observed streamflow "
    ]
   },
   {
@@ -408,14 +430,6 @@
     "else:\n",
     "    ds_obs = nwis.get_streamflow(site_ids, dates, to_xarray=True)\n",
     "    ds_obs.to_netcdf(ncfile) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9af9440c-931a-406d-b5f1-940aaa59b2a9",
-   "metadata": {},
-   "source": [
-    "#### loop over stations"
    ]
   },
   {
@@ -528,7 +542,9 @@
    "source": [
     "#### compute the pearson correlation using xskillscore\n",
     "\n",
-    "Xskillscore has a large number of [deterministic](https://xskillscore.readthedocs.io/en/stable/quick-start.html#Deterministic-Metrics) and [probabalistic](https://xskillscore.readthedocs.io/en/stable/quick-start.html#Probabilistic-Metrics) metrics"
+    "Xskillscore has a large number of [deterministic](https://xskillscore.readthedocs.io/en/stable/quick-start.html#Deterministic-Metrics) and [probabalistic](https://xskillscore.readthedocs.io/en/stable/quick-start.html#Probabilistic-Metrics) metrics\n",
+    "\n",
+    "Here we loop through stations:"
    ]
   },
   {
@@ -538,13 +554,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = xs.pearson_r(ds_obs_daily,ds_mod_daily, dim='time')"
+    "r = []\n",
+    "for i in range(len(site_ids)):\n",
+    "    r.append(float(xs.pearson_r(ds_obs_daily.isel(station_id=i),\n",
+    "                                ds_mod_daily.isel(station_id=i), \n",
+    "                                dim='time', skipna=True).values))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d005d17-7c86-4094-82e2-3f37058dc983",
+   "id": "98f737b4-d053-40b1-9540-ba65c456d228",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e4dd12b-2117-4d73-bff8-51611b033a93",
+   "id": "e9bd9a65-7efb-4c53-bdfd-667a46e48325",
    "metadata": {},
    "outputs": [],
    "source": []
