--- a/gallery/nwm_analysis_bag.ipynb
+++ b/gallery/nwm_analysis_bag.ipynb
@@ -16,7 +16,7 @@
     "The basic workflow loads the predictions and observations, subsets them to the domain of the benchmark, then calculate metrics over that domain.\n",
     "Any benchmark is fully reproducable given a workflow notebook and the correct versions of each of these three components.\n",
     "\n",
-    "In practice, the datasets may be too large to fit in memory or to transfer over the internet, so this notebook will demonstrate several open-source Python libraries, which are quickly becoming standard tools within the Earth-science community\n",
+    "In practice, the datasets may be too large to fit in memory or to transfer over the internet, so this notebook will demonstrate several open-source Python libraries for 'moving the computations to the data.' Some of these tools are relatively new, but they are quickly becoming standards within the Earth-science community\n",
     "\n",
     "The notebook is organized into a series of helper functions that handle tasks like loading data, configuring compute resources, and computing metrics over a chunk of data. Once these are defined, the analysis can be run in a few lines of code."
    ]
