Clean up NWM analysis notebook

--- a/gallery/nwm_analysis_bag.ipynb
+++ b/gallery/nwm_analysis_bag.ipynb
@@ -138,9 +138,8 @@
     "# 1. Define performance benchmark\n",
     "A performance benchmark consists of three components: (1) a set of predictions and observations, (2) the domain over which to benchmark (3) a set of statistical metrics with which to benchmark. The basic workflow is to load the predictions and observations, subset them to the domain of the benchmark, then calculate metrics over that domain.\n",
     "\n",
-    "Let's begin by introducing Intake, which is a tool for loading data... (Rich: add a short explanation?)\n",
-    "\n",
-    "## 1.0 Load data"
+    "## 1.0 Load data\n",
+    "Let's begin by introducing [Intake](https://github.com/intake/intake), which is a set of tools for loading and sharing data in data science projects. Data from this project are stored within an Intake catalog. We can inpsect that catalog with the following lines."
    ]
   },
   {
@@ -233,7 +232,9 @@
    "metadata": {},
    "source": [
     "## 1.1 Load benchmark\n",
-    "Benchmark domains are published to Science Base, or they can be defined within the notebook."
+    "Each benchmark is defined over a specific domain (typically bounded in space and time). Benchmark domains are published to Science Base, or they can be defined within the notebook. \n",
+    "\n",
+    "TODO: Here we load the the benchmark domain from the cloud, but this will be changed to Science Base."
    ]
   },
   {
@@ -248,11 +249,13 @@
     "import pandas as pd\n",
     "fs = fsspec.filesystem('s3', anon=True)\n",
     "url = 's3://esip-qhub-public/usgs/hytest/streamflow_benchmark_sites_v09.csv'\n",
-    "df = pd.read_csv(fs.open(url), dtype={'site_no':str, 'huc_cd':str, 'reachcode':str, 'comid':str})\n",
+    "benchmark_ds = pd.read_csv(fs.open(url), dtype={'site_no':str, 'huc_cd':str, 'reachcode':str, 'comid':str}).set_index('site_no').to_xarray()\n",
     "\n",
-    "benchmark_gages = [ f'USGS-{site}'  for site in list(df['site_no'].values)]\n",
+    "# Format the site_no\n",
+    "benchmark_ds['site_no'] = [f'USGS-{site}' for site in benchmark_ds['site_no'].values]\n",
     "\n",
-    "df.head()"
+    "benchmark_gages = benchmark_ds['site_no'].values.tolist()\n",
+    "benchmark_ds.head()"
    ]
   },
   {
@@ -580,9 +583,11 @@
    "source": [
     "results = [i for i in results if i is not None] # Drop entries where compute_metrics failed\n",
     "\n",
-    "df = pd.concat(results, axis=1)\n",
-    "df1 = df.T.reset_index()\n",
-    "ds_results = xr.Dataset.from_dataframe(df1)\n",
+    "df_results = pd.concat(results, axis=1)\n",
+    "df_results = df_results.T\n",
+    "df_results.index.name = 'site_no'\n",
+    "#df_results.index = df_results.index.astype('<U15')\n",
+    "ds_results = df_results.to_xarray()\n",
     "ds_results"
    ]
   },
@@ -591,7 +596,7 @@
    "id": "9ad992e5-b1d6-4a78-8c9f-88f616124169",
    "metadata": {},
    "source": [
-    "And save the results to disk."
+    "And save the results to disk. First as a csv, which will be uploaded to Science Base."
    ]
   },
   {
@@ -601,7 +606,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_results.to_netcdf('nwm_assessment_reference_sites.nc')"
+    "ds_results.to_dataframe().to_csv('nwm_v2.1_streamflow_benchmark.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adc15622-ef6e-41d1-8b26-f389b429f5dc",
+   "metadata": {},
+   "source": [
+    "Then as a NetCDF, which we will later use for visualization. Let's add latitude and longitude from the benchmark data before writing the results to NetCDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86e90005-11a6-4804-b828-0c6f96b360bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_results.merge(benchmark_ds, join='inner').to_netcdf('nwm_v2.1_streamflow_benchmark.nc')"
    ]
   },
   {
