--- a/gallery/conus404_explore.ipynb
+++ b/gallery/conus404_explore.ipynb
@@ -5,7 +5,10 @@
    "id": "3a3edc9f-3c66-4e03-8c75-b147f15b2e50",
    "metadata": {},
    "source": [
-    "# Explore rechunked CONUS404"
+    "# Explore rechunked CONUS404 dataset\n",
+    "This dataset was created by extracting specified variables from a collection of wrf2d output files, rechunking to better facilitate data extraction for a variety of use cases, and adding CF conventions to allow easier analysis, visualization and data extraction using Xarray.\n",
+    "\n",
+    "[Rendered version of this Notebook](https://nbviewer.org/gist/d225aae8e0898f7de1d2d1c40cc8cdc0)\n"
    ]
   },
   {
@@ -21,6 +24,7 @@
     "import intake\n",
     "import os\n",
     "import warnings\n",
+    "from dask.distributed import LocalCluster, Client\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -58,13 +62,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecef85f6-01e4-4d84-9cce-0bf409b30637",
+   "metadata": {},
+   "source": [
+    "#### Start as Dask client using an appropriate Dask Cluster\n",
+    "This is an optional step, but can speed up data loading significantly, especially when accessing data from the Cloud"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a65bfca4-b4c4-47cf-b088-a35f895162ba",
+   "id": "7b53296c-839b-4bc2-a5f5-d9b9ad146391",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat['conus404-40year-cloud']"
+    "def configure_cluster(resource):\n",
+    "    ''' Helper function to configure cluster\n",
+    "    '''\n",
+    "    if resource == 'denali':\n",
+    "        from dask.distributed import LocalCluster, Client\n",
+    "        cluster = LocalCluster(threads_per_worker=1)\n",
+    "        client = Client(cluster)\n",
+    "    \n",
+    "    elif resource == 'tallgrass':\n",
+    "        from dask.distributed import Client\n",
+    "        from dask_jobqueue import SLURMCluster\n",
+    "        cluster = SLURMCluster(queue='cpu', cores=1, interface='ib0',\n",
+    "                               job_extra=['--nodes=1', '--ntasks-per-node=1', '--cpus-per-task=1'],\n",
+    "                               memory='6GB')\n",
+    "        cluster.adapt(maximum_jobs=30)\n",
+    "        client = Client(cluster)\n",
+    "        \n",
+    "    elif resource == 'local':\n",
+    "        import os\n",
+    "        import warnings\n",
+    "        warnings.warn(\"Running locally can result in costly data transfers!\\n\")\n",
+    "        n_cores = os.cpu_count() # set to match your machine\n",
+    "        cluster = LocalCluster(threads_per_worker=n_cores)\n",
+    "        client = Client(cluster)\n",
+    "        \n",
+    "    elif cluster_type in ['esip-qhub-gateway-v0.4']:   \n",
+    "        import sys, os\n",
+    "        sys.path.append(os.path.join(os.environ['HOME'],'shared','users','lib'))\n",
+    "        import ebdpy as ebd\n",
+    "        ebd.set_credentials(profile='esip-qhub')\n",
+    "\n",
+    "        aws_profile = 'esip-qhub'\n",
+    "        aws_region = 'us-west-2'\n",
+    "        endpoint = f's3.{aws_region}.amazonaws.com'\n",
+    "        ebd.set_credentials(profile=aws_profile, region=aws_region, endpoint=endpoint)\n",
+    "        worker_max = 30\n",
+    "        client,cluster = ebd.start_dask_cluster(profile=aws_profile, worker_max=worker_max, \n",
+    "                                              region=aws_region, use_existing_cluster=True,\n",
+    "                                              adaptive_scaling=False, wait_for_cluster=False, \n",
+    "                                              worker_profile='Medium Worker', propagate_env=True)\n",
+    "        \n",
+    "    return client, cluster"
    ]
   },
   {
@@ -75,15 +129,39 @@
    "outputs": [],
    "source": [
     "if 'SLURM_CLUSTER_NAME' in os.environ:\n",
-    "    ds = cat['conus404-40year-onprem'].to_dask()\n",
+    "    dataset = 'conus404-40year-onprem'\n",
+    "    machine = os.environ['SLURM_CLUSTER_NAME']\n",
+    "    client, cluster = configure_cluster(machine)\n",
     "else:\n",
-    "    ds = cat['conus404-40year-cloud'].to_dask()"
+    "    dataset = 'conus404-40year-cloud'\n",
+    "    machine = 'esip-qhub-gateway-v0.4'\n",
+    "    client, cluster = configure_cluster(machine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1a969f1-9f7c-4e90-8afe-c4519b2e60fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat[dataset]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2bd3316b-6e51-4fae-b536-2f5fdbacfd81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = cat[dataset].to_dask()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cdef426-5db7-4158-87da-8b8b8e739418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,62 +210,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c143217-6f5b-4162-825f-cf4935003e1c",
-   "metadata": {},
-   "source": [
-    "#### Create a Dask cluster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b53296c-839b-4bc2-a5f5-d9b9ad146391",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def configure_cluster(resource):\n",
-    "    ''' Helper function to configure cluster\n",
-    "    '''\n",
-    "    if resource == 'denali':\n",
-    "        cluster = LocalCluster(threads_per_worker=1)\n",
-    "        client = Client(cluster)\n",
-    "    \n",
-    "    elif resource == 'tallgrass':\n",
-    "        cluster = SLURMCluster(queue='cpu', cores=1, interface='ib0',\n",
-    "                               job_extra=['--nodes=1', '--ntasks-per-node=1', '--cpus-per-task=1'],\n",
-    "                               memory='6GB')\n",
-    "        cluster.adapt(maximum_jobs=30)\n",
-    "        client = Client(cluster)\n",
-    "        \n",
-    "    elif resource == 'local':\n",
-    "        import os\n",
-    "        import warnings\n",
-    "        warnings.warn(\"Running locally can result in costly data transfers!\\n\")\n",
-    "        n_cores = os.cpu_count() # set to match your machine\n",
-    "        cluster = LocalCluster(threads_per_worker=n_cores)\n",
-    "        client = Client(cluster)\n",
-    "        \n",
-    "    elif cluster_type in ['esip-qhub-gateway-v0.4']:   \n",
-    "        import sys, os\n",
-    "        sys.path.append(os.path.join(os.environ['HOME'],'shared','users','lib'))\n",
-    "        import ebdpy as ebd\n",
-    "        ebd.set_credentials(profile='esip-qhub')\n",
-    "\n",
-    "        aws_profile = 'esip-qhub'\n",
-    "        aws_region = 'us-west-2'\n",
-    "        endpoint = f's3.{aws_region}.amazonaws.com'\n",
-    "        ebd.set_credentials(profile=aws_profile, region=aws_region, endpoint=endpoint)\n",
-    "        worker_max = 30\n",
-    "        client,cluster = ebd.start_dask_cluster(profile=aws_profile, worker_max=worker_max, \n",
-    "                                              region=aws_region, use_existing_cluster=True,\n",
-    "                                              adaptive_scaling=False, wait_for_cluster=False, \n",
-    "                                              worker_profile='Medium Worker', propagate_env=True)\n",
-    "        \n",
-    "    return client, cluster"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "91c71dae-3e8e-4293-b741-9c0992cc4c52",
    "metadata": {},
    "source": [
@@ -218,21 +240,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54707e70-d88e-4445-b03f-474ec27eb1d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "da.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a9e306cc-9c06-4079-96b1-12b1cf478ad0",
    "metadata": {},
    "outputs": [],
    "source": [
     "da.hvplot(x='time', grid=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3aff08b-975d-47e1-ac51-6bb8e8b1adbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.close()"
    ]
   }
  ],
