--- a/gallery/conus404_explore.ipynb
+++ b/gallery/conus404_explore.ipynb
@@ -8,7 +8,7 @@
     "# Explore rechunked CONUS404 dataset\n",
     "This dataset was created by extracting specified variables from a collection of wrf2d output files, rechunking to better facilitate data extraction for a variety of use cases, and adding CF conventions to allow easier analysis, visualization and data extraction using Xarray.\n",
     "\n",
-    "[Rendered version of this Notebook](https://nbviewer.org/gist/d225aae8e0898f7de1d2d1c40cc8cdc0)\n"
+    "[Rendered version of this Notebook](https://nbviewer.org/gist/b7d42e998ff4f0d1419d1b2c5dc9339e)\n"
    ]
   },
   {
@@ -77,15 +77,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def configure_cluster(resource):\n",
+    "def configure_cluster(machine):\n",
     "    ''' Helper function to configure cluster\n",
     "    '''\n",
-    "    if resource == 'denali':\n",
+    "    if machine == 'denali':\n",
     "        from dask.distributed import LocalCluster, Client\n",
     "        cluster = LocalCluster(threads_per_worker=1)\n",
     "        client = Client(cluster)\n",
     "    \n",
-    "    elif resource == 'tallgrass':\n",
+    "    elif machine == 'tallgrass':\n",
     "        from dask.distributed import Client\n",
     "        from dask_jobqueue import SLURMCluster\n",
     "        cluster = SLURMCluster(queue='cpu', cores=1, interface='ib0',\n",
@@ -94,7 +94,7 @@
     "        cluster.adapt(maximum_jobs=30)\n",
     "        client = Client(cluster)\n",
     "        \n",
-    "    elif resource == 'local':\n",
+    "    elif machine == 'local':\n",
     "        import os\n",
     "        import warnings\n",
     "        warnings.warn(\"Running locally can result in costly data transfers!\\n\")\n",
@@ -102,13 +102,13 @@
     "        cluster = LocalCluster(threads_per_worker=n_cores)\n",
     "        client = Client(cluster)\n",
     "        \n",
-    "    elif cluster_type in ['esip-qhub-gateway-v0.4']:   \n",
+    "    elif machine in ['esip-qhub-gateway-v0.4']:   \n",
     "        import sys, os\n",
     "        sys.path.append(os.path.join(os.environ['HOME'],'shared','users','lib'))\n",
     "        import ebdpy as ebd\n",
-    "        ebd.set_credentials(profile='esip-qhub')\n",
-    "\n",
     "        aws_profile = 'esip-qhub'\n",
+    "        ebd.set_credentials(profile=aws_profile)\n",
+    "\n",
     "        aws_region = 'us-west-2'\n",
     "        endpoint = f's3.{aws_region}.amazonaws.com'\n",
     "        ebd.set_credentials(profile=aws_profile, region=aws_region, endpoint=endpoint)\n",
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "da = ds.T2.isel(y=600,x=600).load()"
+    "da = ds.T2.isel(y=600,x=600).sel(time=slice('2015-02-11 00:00','2015-04-28 00:00')).load()"
    ]
   },
   {
@@ -248,21 +248,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9230a094-4dcd-4552-852e-be62cb29e15d",
+   "metadata": {},
+   "source": [
+    "#### Close client and cluster"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c3aff08b-975d-47e1-ac51-6bb8e8b1adbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.close()"
+    "client.close(); cluster.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54ba39b1-a3b3-45dc-879c-89c5360fd202",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pangeo]",
+   "display_name": "users-pangeo",
    "language": "python",
-   "name": "conda-env-pangeo-py"
+   "name": "conda-env-users-pangeo-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -275,6 +291,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
