--- a/gallery/conus404_regrid.ipynb
+++ b/gallery/conus404_regrid.ipynb
@@ -6,8 +6,8 @@
     "tags": []
    },
    "source": [
-    "# xESMF Regridding:  Curvilinear CONUS404  => Rectilinear\n",
-    "Create a rectilinear grid (1D lon/lat coordinates) for a specific region.\n",
+    "# CONUS404 Regridding CurvilinearCONUS404  => Rectilinear\n",
+    "Create a rectilinear grid (1D lon/lat coordinates) for a specific region. Extract spatial and temporal subset of regridded data to a netcdf file. (Extraction to netcdf may also be done for curvilinear grid.)\n",
     "\n",
     "[Rendered Notebook](https://nbviewer.org/gist/de80efcd86c544e12ed3d3781319d4bb)"
    ]
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://raw.githubusercontent.com/nhm-usgs/data-pipeline-helpers/main/conus404/conus404_intake.yml'"
+    "url = 'https://raw.githubusercontent.com/USGS-python/hytest-catalogs/main/hytest_intake_catalog.yml'"
    ]
   },
   {
@@ -75,8 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nc_outfile = 'CONUS404_de_bay_rectilinear.nc'\n",
-    "bbox = [-76.8, -73.7, 37.7, 40.38]\n",
+    "nc_outfile = 'CONUS404_DRB_rectilinear.nc'\n",
+    "bbox = [-75.9, -74.45, 38.7, 42.55]\n",
     "dx = dy = 3./111.    # 3km grid\n",
     "vars_out = ['T2', 'SNOW']\n",
     "start = '2017-04-01 00:00'\n",
@@ -139,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "i0,i1,j0,j1 = bbox2ij(ds['lon'].values, ds['lat'].values, bbox=bbox)\n",
@@ -149,10 +151,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "ds_subset = ds.isel(west_east=slice(i0-1,i1+1), south_north=slice(j0-1,j1+1))"
+    "ds_subset = ds.isel(x=slice(i0-1,i1+1), y=slice(j0-1,j1+1))"
    ]
   },
   {
@@ -206,11 +210,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%time\n",
-    "ds_subset = ds_subset.chunk({'west_east':-1, 'south_north':-1, 'time':24})"
+    "ds_subset = ds_subset.chunk({'x':-1, 'y':-1, 'time':24})"
    ]
   },
   {
@@ -306,7 +312,7 @@
     "%%time\n",
     "\n",
     "ds_out.to_netcdf(nc_outfile, encoding=encoding, \n",
-    "                 engine='h5netcdf', mode='w')"
+    "                 mode='w')"
    ]
   },
   {
@@ -341,6 +347,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ds_outcl = ds_subset[vars_out]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(ds_outcl.data_vars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoding={}\n",
+    "for var in ds_outcl.variables:\n",
+    "    encoding[var] = dict(zlib=True, complevel=2, \n",
+    "                         fletcher32=False, shuffle=True,\n",
+    "                         _FillValue=None\n",
+    "                        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "ds_outcl.to_netcdf('CONUS404_DRB_curvilinear.nc', encoding=encoding, \n",
+    "                 mode='w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,9 +409,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pangeo]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-pangeo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -371,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
